# rs-case

./: .gitignore  Cargo.toml  README.md  README.rst  build-wheels.sh  publish.py  pyproject.toml  requirements-pypi.txt  setup.py
.github/workflows/: publish.yml  rust.yml  test.yml  test_and_publish.yml  test_develop.yml  test_master.yml
docs/: CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  README.rst
rscase/: __init__.py  rscase.cp38-win_amd64.pyd
src/: camel_case.rs  functions.rs  kebab_case.rs  lib.rs  pascal_case.rs  snake_case.rs  test.rs
test_scripts/: test_camel_case.py  test_snake_case.py
