[package]
name = "rscase"
version = "0.1.0"
edition = '2018'
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
documentation = "https://github.com/sondrelg/rs-case"

[lib]
name = "rscase"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = []
requires-python = '>= 3.5'
project-url = [
"Code, https://github.com/sondrelg/rscase",
"Pypi, https://pypi.org/project/rscase/"
]
classifier = [
"Development Status :: 3 - Alpha",
"Environment :: Web Environment",
"Intended Audience :: Developers",
"License :: OSI Approved :: BSD License",
"Natural Language :: English",
"Operating System :: OS Independent",
"Programming Language :: Python",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.8",
"Programming Language :: Rust",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Text Processing :: General",
]
