[package]
name = "rscase"
version = "1.1.1"  # Remember to change __init__.py
edition = '2018'
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
documentation = "https://github.com/sondrelg/rs-case"

[lib]
name = "rscase"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
